--- a/portfolio.html
+++ b/portfolio.html
@@ -281,7 +281,20 @@
           </li>
         </ul>
       </div>
-    
+     
+      <div class="subscrip">
+        <p class="subscrip-title">Підпишіться на розсилку</p>
+        <form class="footer-form" autocomplete="on">
+          <input class="subscrip-input" type="email" name="email" placeholder="E-mail" required />
+          <button type="submit" class="subscrip-btn">
+            Підписатися
+            <svg class="icon-subscribe" width="24px" height="24px">
+              <use href="./images/icon-send.svg"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+
   </div>
   </footer>
   </body>
