--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ№5</title>
+    <title>ДЗ№6</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -289,7 +289,7 @@
           <button type="submit" class="subscrip-btn">
             Підписатися
             <svg class="icon-subscribe" width="24px" height="24px">
-              <use href="./images/icon-send.svg"></use>
+              <use href="./images/modal-symbol1.svg#icon-telegram""></use>
             </svg>
           </button>
         </form>
