--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ№5</title>
+    <title>ДЗ№6</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -429,8 +429,8 @@
             <input class="subscrip-input" type="email" name="email" placeholder="E-mail" required />
             <button type="submit" class="subscrip-btn">
               Підписатися
-              <svg class="icon-subscribe" width="24px" height="24px">
-                <use href="./images/icon-send.svg"></use>
+              <svg class="icon-subscribe" width="24" height="24">
+                <use href="./images/modal-symbol1.svg#icon-telegram"></use>
               </svg>
             </button>
           </form>
@@ -444,41 +444,33 @@
           <svg class="close-icon" width="18" height="18"></svg>
         </button>
 
-        <div class="modal-container">
           <p class="modal-header">Залиште свої дані, ми вам передзвонимо</p>
-
           <form class="js-speaker-form" autocomplete="off">
             <div class="modal-form">
               <label class="modal-text" for="name">Ім'я</label>
               <input class="modal-type" type="text" name="name" id="name" />
-              <span class="modal-item">
                 <svg class="modal-svg">
-                  <use href="./images/modal-symbol.svg#icon-name"></use>
+                  <use href="./images/modal-symbol1.svg#icon-name"></use>
                 </svg>
-              </span>
             </div>
 
             <div class="modal-form">
               <label class="modal-text" for="tel">Телефон</label>
               <input class="modal-type" type="tel" name="tel" id="tel" />
-              <span class="modal-item">
                 <svg class="modal-svg">
                   <use href="./images/modal-symbol1.svg#icon-phone"></use>
-                </svg>
               </span>
             </div>
 
             <div class="modal-form">
               <label class="modal-text" for="mail">Почта</label>
               <input class="modal-type" type="email" name="mail" id="mail" />
-              <span class="modal-item">
                 <svg class="modal-svg">
                   <use href="./images/modal-symbol1.svg#icon-mail"></use>
-                </svg>
               </span>
             </div>
 
-            <div class="modal-form">
+            <div class="modal-texterea">
               <label class="modal-text" for="comment">Коментар</label>
               <textarea
                 class="comment-type"
@@ -487,7 +479,7 @@
                 placeholder="Введіть текст"
               ></textarea>
             </div>
-            <div>
+            <div class="modal-checkbox">
               <input
                 type="checkbox"
                 name="pilicy"
@@ -502,7 +494,7 @@
 
             <button class="modal-btn-type" type="submit">Відправити</button>
           </form>
-        </div>
+        
       </div>
     </div>
 
